[gd_scene load_steps=6 format=3 uid="uid://dftuedx82aneu"]

[ext_resource type="Script" path="res://Scripts/encyclopedia.gd" id="1_7x68r"]
[ext_resource type="Texture2D" uid="uid://cssbl0ckgwq74" path="res://Assets/sprites/closed_book.png" id="2_u8kre"]
[ext_resource type="Texture2D" uid="uid://c5wo5ohfgwcwl" path="res://Assets/sprites/open_book.png" id="3_k3jrq"]
[ext_resource type="LabelSettings" uid="uid://dtbvo0w76rap1" path="res://fonts/label_setting.tres" id="4_mllbh"]
[ext_resource type="PackedScene" uid="uid://dkv3eat6lhkcn" path="res://Scenes/animation_pour_livre.tscn" id="5_smlq5"]

[node name="Encyclopedia" type="Node2D"]
position = Vector2(34, 34)
script = ExtResource("1_7x68r")

[node name="OpenClose" type="Button" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0

[node name="petit_livre" type="Sprite2D" parent="OpenClose"]
z_index = 1
texture_filter = 1
position = Vector2(32, 32)
texture = ExtResource("2_u8kre")

[node name="Book" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(255, 84)
texture = ExtResource("3_k3jrq")

[node name="Close" type="Button" parent="Book"]
offset_left = 19.8
offset_top = -20.3
offset_right = 62.8
offset_bottom = 25.7
scale = Vector2(0.1, 0.1)
text = "X"

[node name="Page_gauche" type="Control" parent="Book"]
layout_mode = 3
anchors_preset = 0
offset_left = -21.0
offset_top = -21.0
offset_right = -1.0
offset_bottom = 15.0

[node name="Title" type="Label" parent="Book/Page_gauche"]
layout_mode = 0
offset_left = -19.0
offset_top = -44.0
offset_right = 74.0
offset_bottom = -8.0
scale = Vector2(0.4, 0.4)
text = "Titre page"
label_settings = ExtResource("4_mllbh")
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Item" parent="Book/Page_gauche" instance=ExtResource("5_smlq5")]
position = Vector2(-31, -38)

[node name="Body" type="Label" parent="Book/Page_gauche"]
layout_mode = 0
offset_left = -40.0
offset_top = -29.0
offset_right = 153.0
offset_bottom = 257.0
scale = Vector2(0.3, 0.3)
text = "Bonjour aventurier bien ou quoi ?

The item :

- machin truc

- truc machin









Thym batardddddddddd"
label_settings = ExtResource("4_mllbh")
autowrap_mode = 3
clip_text = true

[node name="Page_droite" type="Control" parent="Book"]
layout_mode = 3
anchors_preset = 0
offset_left = 43.0
offset_top = -21.0
offset_right = 63.0
offset_bottom = 15.0

[node name="Title" type="Label" parent="Book/Page_droite"]
layout_mode = 0
offset_left = -19.0
offset_top = -44.0
offset_right = 74.0
offset_bottom = -8.0
scale = Vector2(0.4, 0.4)
text = "Titre page"
label_settings = ExtResource("4_mllbh")
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Item" parent="Book/Page_droite" instance=ExtResource("5_smlq5")]
position = Vector2(-31, -38)

[node name="Body" type="Label" parent="Book/Page_droite"]
layout_mode = 0
offset_left = -40.0
offset_top = -29.0
offset_right = 153.0
offset_bottom = 257.0
scale = Vector2(0.3, 0.3)
text = "Bonjour aventurier bien ou quoi ?

The item :

- machin truc

- truc machin









Thym batardddddddddd"
label_settings = ExtResource("4_mllbh")
autowrap_mode = 3
clip_text = true

[node name="Next_Page" type="Button" parent="Book"]
offset_left = 58.0
offset_top = 38.0
offset_right = 84.0
offset_bottom = 64.0
scale = Vector2(0.5, 0.5)

[node name="Previous_Page" type="Button" parent="Book"]
offset_left = -58.0
offset_top = 50.0
offset_right = -31.0
offset_bottom = 75.0
rotation = 3.14159
scale = Vector2(0.5, 0.5)

[connection signal="button_down" from="OpenClose" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Book/Close" to="." method="_on_close_button_down"]
[connection signal="button_down" from="Book/Next_Page" to="." method="_on_next_page_button_down"]
[connection signal="button_down" from="Book/Previous_Page" to="." method="_on_previous_page_button_down"]
